# rust-mart

./: Cargo.toml  Makefile.toml  README.md
src/: api.rs  app.rs  lib.rs  route.rs
src/components/: product_card.rs
src/pages/: home.rs  mod.rs  product_details.rs
static/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.d.ts  wasm_bg.wasm
