[package]
name = "rust-mart"
version = "0.1.0"
authors = ["d-mv <d.dash.mv@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
yew = '0.17'
yew-router = "0.14.0"
wasm-bindgen = '0.2.67'
anyhow = '1.0.32'
serde = { version = "1.0.115", features = ['derive'] }
